--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "contributors": [],
     "devDependencies": {},
     "dependencies": {
-        "underscore": ">= 1.2.0"
+        "underscore": ">= 1.2.0",
+        "xml2js": ">= 0.1.11"
     },
     "main": "lib/awssum",
     "directories": {
