--- a/package.json
+++ b/package.json
@@ -38,5 +38,8 @@
         "flickr",
         "paypal",
         "xero"
-    ]
+    ],
+    "scripts" : {
+        "test" : "./bin/test.sh"
+    }
 }
