--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     },
     "dependencies": {
         "underscore": ">= 1.2.0",
-        "xml2js": ">= 0.1.11"
+        "xml2js": ">= 0.1.11",
+        "request": ">= 2.1.1",
+        "dateformat": ">= 1.0.2-1.2.3"
     },
     "main": "lib/awssum",
     "directories": {
