--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
         "underscore": ">= 1.2.0",
         "xml2js": ">= 0.1.11",
         "request": ">= 2.1.1",
-        "dateformat": ">= 1.0.2-1.2.3"
+        "dateformat": ">= 1.0.2-1.2.3",
+        "xml": ">= 0.0.5"
     },
     "main": "lib/awssum",
     "directories": {
