--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
         "xml2js": ">= 0.1.11",
         "request": ">= 2.1.1",
         "dateformat": ">= 1.0.2-1.2.3",
-        "xml": ">= 0.0.5"
+        "xml": ">= 0.0.5",
+        "data2xml": ">= 0.1.0"
     },
     "main": "lib/awssum",
     "directories": {
