--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
         "xml2js": ">= 0.1.11",
         "dateformat": ">= 1.0.2-1.2.3",
         "xml": ">= 0.0.5",
-        "data2xml": ">= 0.4.0",
-        "eyes": ">=0.1.7"
+        "data2xml": ">= 0.4.0"
     },
     "main": "lib/awssum.js",
     "directories":  {
