--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "homepage": "https://github.com/appsattic/node-awssum",
     "contributors": [],
     "devDependencies": {
-        "tap": ">= 0.0.11"
+        "tap": ">= 0.0.11",
+        "eyes": ">= 0.1.7"
     },
     "dependencies": {
         "underscore": ">= 1.2.0",
