--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
         "lib": "lib"
     },
     "engines": {
-        "node": "*"
+        "node": ">= 0.6.0"
     },
     "repository": {
         "type" : "git",
