--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "devDependencies": {
         "tap": ">= 0.0.11",
         "jshint": ">= 0.6.1",
+        "commander": ">= 0.6.0",
         "eyes": ">= 0.1.7"
     },
     "dependencies": {
