Added integration tests for Amazon S3 multipart uploads

--- a/package.json
+++ b/package.json
@@ -51,6 +51,6 @@
         "xero"
     ],
     "scripts" : {
-        "test" : "tap test/"
+        "test" : "tap test/*.js test/integration/*.js"
     }
 }
