--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     }],
     "keywords": [
         "api",
-        "amazon","aws","ec2","simpledb","s3","sqs","ses","sns","route53","rds","elasticache","cloudfront","fps","cloudformation","cloudwatch","dynamodb","iam","swf"
+        "amazon","aws","ec2","simpledb","s3","sqs","ses","sns","route53","rds","elasticache","cloudfront","fps","cloudformation","cloudwatch","dynamodb","iam","swf",
         "rackspacecloud",
         "flickr",
         "paypal",
