--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "dateformat": ">= 1.0.2-1.2.3",
         "xml": ">= 0.0.7",
         "data2xml": ">= 0.4.0",
+        "fmt": ">= 0.2.0",
         "passgen": ">= 1.0.1"
     },
     "main": "lib/awssum.js",
