--- a/package.json
+++ b/package.json
@@ -46,9 +46,7 @@
         "api",
         "amazon","aws","ec2","simpledb","s3","sqs","ses","sns","route53","rds","elasticache","cloudfront","fps","cloudformation","cloudwatch","dynamodb","iam","swf",
         "rackspacecloud",
-        "flickr",
-        "paypal",
-        "xero"
+        "openstack"
     ],
     "scripts" : {
         "test" : "tap test/*.js test/integration/*.js"
