--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "eyes": ">= 0.1.7"
     },
     "dependencies": {
+        "fmt" : ">= 0.3.0",
         "underscore": ">= 1.3.3",
         "xml2js": ">= 0.1.14",
         "dateformat": ">= 1.0.2-1.2.3",
