--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "dependencies": {
         "fmt" : ">= 0.4.0",
         "underscore": ">= 1.3.3",
-        "xml2js": ">= 0.1.14",
+        "xml2js": "~ 0.1.14",
         "dateformat": ">= 1.0.2-1.2.3",
         "xml": ">= 0.0.7",
         "data2xml": ">= 0.4.0",
