--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
         "xml2js": "~ 0.1.14",
         "dateformat": ">= 1.0.2-1.2.3",
         "xml": ">= 0.0.7",
-        "data2xml": ">= 0.4.0",
+        "data2xml": "0.4.x",
         "passgen": ">= 1.0.1"
     },
     "main": "lib/awssum.js",
