Fix my email address in package.json

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     },
     "bugs" : {
         "url" : "http://github.com/awssum/awssum/issues",
-        "mail" : "andychilton@gmail.com"
+        "email" : "andychilton@gmail.com"
     },
 
     "author" : {
