--- a/package.json
+++ b/package.json
@@ -33,7 +33,12 @@
         "email" : "andychilton@gmail.com",
         "url" : "http://chilts.org/"
     },
-    "contributors" : [],
+    "contributors" : [
+        {
+            "name": "Giannis Kosmas",
+            "url": "https://github.com/kosmasgiannis"
+        }
+    ],
     "licenses" : [{
         "type" : "MIT",
         "url" : "https://github.com/awssum/awssum/raw/master/LICENSE"
