--- a/package.json
+++ b/package.json
@@ -1,49 +1,51 @@
 {
-    "name" : "awssum",
-    "description" : "NodeJS module to aid talking to Web Service APIs. Requires plugins.",
-    "version" : "1.2.0",
-
-    "main" : "awssum.js",
-    "engines" : {
-        "node" : ">= 0.6.0"
-    },
-    "devDependencies" : {
-        "tape" : "*"
-    },
-    "dependencies" : {
-        "underscore" : "1.4.x",
-        "xml2js" : "0.2.x"
-    },
-    "scripts" : {
-        "test" : "set -e; find test/ -name '*.js' -exec echo --- {} --- ';' -exec node {} ';'"
-    },
-
-    "homepage" : "http://awssum.io/",
-    "repository" : {
-        "type" : "git",
-        "url" : "git://github.com/awssum/awssum.git"
-    },
-    "bugs" : {
-        "url" : "https://github.com/awssum/awssum/issues",
-        "email" : "andychilton@gmail.com"
-    },
-
-    "author" : {
-        "name" : "Andrew Chilton",
-        "email" : "andychilton@gmail.com",
-        "url" : "http://chilts.org/"
-    },
-    "contributors" : [
-        {
-            "name": "Giannis Kosmas",
-            "url": "https://github.com/kosmasgiannis"
-        }
-    ],
-    "licenses" : [{
-        "type" : "MIT",
-        "url" : "https://github.com/awssum/awssum/raw/master/LICENSE"
-    }],
-    "keywords" : [
-        "api", "apis", "webapi", "client"
-    ]
+  "name": "awssum",
+  "description": "NodeJS module to aid talking to Web Service APIs. Requires plugins.",
+  "version": "1.3.0",
+  "main": "awssum.js",
+  "engines": {
+    "node": ">= 0.6.0"
+  },
+  "devDependencies": {
+    "tape": "*"
+  },
+  "dependencies": {
+    "underscore": "1.4.x",
+    "xml2js": "0.2.x"
+  },
+  "scripts": {
+    "test": "set -e; find test/ -name '*.js' -exec echo --- {} --- ';' -exec node {} ';'"
+  },
+  "homepage": "http://awssum.io/",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/awssum/awssum.git"
+  },
+  "bugs": {
+    "url": "https://github.com/awssum/awssum/issues",
+    "email": "andychilton@gmail.com"
+  },
+  "author": {
+    "name": "Andrew Chilton",
+    "email": "andychilton@gmail.com",
+    "url": "http://chilts.org/"
+  },
+  "contributors": [
+    {
+      "name": "Giannis Kosmas",
+      "url": "https://github.com/kosmasgiannis"
+    }
+  ],
+  "licenses": [
+    {
+      "type": "MIT",
+      "url": "https://github.com/awssum/awssum/raw/master/LICENSE"
+    }
+  ],
+  "keywords": [
+    "api",
+    "apis",
+    "webapi",
+    "client"
+  ]
 }
